--- a/index.html
+++ b/index.html
@@ -95,32 +95,39 @@
             flex-wrap: wrap;
             justify-content: space-between;
             align-items: center;
-            padding-bottom: 20px;
+            padding: 20px 0;
+            width: 100%;
+            position: relative;
+            z-index: 1;
         }
 
         .neon-text {
-            font-size: clamp(2rem, 6vw, 3rem);
+            font-size: clamp(1.8rem, 5vw, 2.5rem);
             text-shadow: 0 0 15px #64ffda, 0 0 30px #00b4d8;
             color: #64ffda;
+            margin-right: auto;
         }
 
         nav ul {
             list-style: none;
             display: flex;
-            flex-wrap: wrap;
-            gap: 15px;
-            justify-content: center;
+            align-items: center;
         }
 
         .nav-link {
             color: #64ffda;
             text-decoration: none;
-            font-size: clamp(1rem, 2.5vw, 1.2rem);
-            transition: color 0.3s;
+            font-size: clamp(0.9rem, 2vw, 1.1rem);
+            padding: 8px 15px;
+            border-radius: 20px;
+            transition: all 0.3s;
+            background: rgba(100, 255, 218, 0.1);
         }
 
         .nav-link:hover {
             color: #00b4d8;
+            background: rgba(100, 255, 218, 0.2);
+            box-shadow: 0 0 15px rgba(100, 255, 218, 0.3);
         }
 
         main {
@@ -156,51 +163,65 @@
             overflow: hidden;
             transform-style: preserve-3d;
             perspective: 1000px;
+            animation: float 6s ease-in-out infinite;
         }
 
-        .radio-display::before {
+        @keyframes float {
+            0%, 100% { transform: translateY(0) rotateX(0); }
+            50% { transform: translateY(-10px) rotateX(5deg); }
+        }
+
+        .radio-display::after {
             content: '';
             position: absolute;
             top: 0;
             left: 0;
-            right: 0;
-            bottom: 0;
-            background: linear-gradient(45deg, transparent 48%, #64ffda 50%, transparent 52%);
-            background-size: 200% 200%;
-            animation: scan 3s linear infinite;
-            opacity: 0.1;
-            pointer-events: none;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(45deg, 
+                rgba(100, 255, 218, 0.1),
+                transparent 60%);
+            transform-origin: 0 0;
+            animation: hologram 8s linear infinite;
         }
 
-        @keyframes scan {
-            0% { background-position: 200% 0; }
-            100% { background-position: -200% 0; }
+        @keyframes hologram {
+            0% { transform: translateX(-100%) rotateZ(45deg); opacity: 0; }
+            50% { opacity: 0.5; }
+            100% { transform: translateX(200%) rotateZ(45deg); opacity: 0; }
         }
 
         .tuner-controls {
-            margin-top: 10px;
+            margin-top: 20px;
             display: flex;
             flex-direction: column;
-            gap: 10px;
+            gap: 15px;
             align-items: center;
+            width: 100%;
         }
 
         .tuner-buttons {
             display: flex;
             flex-wrap: wrap;
-            gap: 10px;
+            gap: 12px;
             justify-content: center;
+            width: 100%;
+            padding: 0 10px;
         }
 
         .futuristic-btn {
-            padding: 10px 20px;
+            padding: 12px 24px;
             background: transparent;
             border: 2px solid #00b4d8;
             color: #fff;
-            border-radius: 5px;
+            border-radius: 8px;
             cursor: pointer;
-            font-size: clamp(0.9rem, 2vw, 1rem);
+            font-size: clamp(0.85rem, 1.8vw, 1rem);
             transition: all 0.3s;
+            min-width: 80px;
+            text-align: center;
+            -webkit-tap-highlight-color: transparent;
+            touch-action: manipulation;
         }
 
         .futuristic-btn:hover, .futuristic-btn:focus {
@@ -212,18 +233,22 @@
         .tuner-slider {
             width: 100%;
             max-width: 300px;
-            margin: 10px auto;
+            margin: 15px auto;
+            padding: 0 10px;
         }
 
         input[type="range"] {
             -webkit-appearance: none;
+            appearance: none;
             width: 100%;
-            height: 5px;
+            height: 6px;
             background: #64ffda;
             border-radius: 5px;
             outline: none;
             opacity: 0.7;
             transition: opacity 0.2s;
+            cursor: pointer;
+            touch-action: manipulation;
         }
 
         input[type="range"]:hover {
@@ -232,12 +257,24 @@
 
         input[type="range"]::-webkit-slider-thumb {
             -webkit-appearance: none;
-            width: 20px;
-            height: 20px;
+            appearance: none;
+            width: 24px;
+            height: 24px;
             background: #00b4d8;
             border-radius: 50%;
             cursor: pointer;
             box-shadow: 0 0 10px #00b4d8;
+            border: 2px solid rgba(255, 255, 255, 0.5);
+        }
+
+        input[type="range"]::-moz-range-thumb {
+            width: 24px;
+            height: 24px;
+            background: #00b4d8;
+            border-radius: 50%;
+            cursor: pointer;
+            box-shadow: 0 0 10px #00b4d8;
+            border: 2px solid rgba(255, 255, 255, 0.5);
         }
 
         .loading {
@@ -308,45 +345,23 @@
             perspective: 1000px;
             position: relative;
             overflow: hidden;
-        }
-
-        .station-card::after {
-            content: '';
-            position: absolute;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
-            background: linear-gradient(
-                45deg,
-                transparent,
-                rgba(100, 255, 218, 0.1),
-                transparent
-            );
-            transform: rotate(45deg);
-            transition: all 0.3s;
-            opacity: 0;
-        }
-
-        .station-card:hover::after {
-            opacity: 1;
-            animation: shine 1.5s infinite;
-        }
-
-        @keyframes shine {
-            0% { transform: rotate(45deg) translate(-100%, -100%); }
-            100% { transform: rotate(45deg) translate(100%, 100%); }
+            transform: translateZ(0);
         }
 
         .station-card:hover {
-            transform: translateY(-5px) rotateX(10deg);
-            box-shadow: 0 5px 15px rgba(100, 255, 218, 0.3);
+            transform: translateY(-5px) rotateX(10deg) scale(1.02);
+            box-shadow: 
+                0 5px 15px rgba(100, 255, 218, 0.3),
+                0 0 30px rgba(100, 255, 218, 0.1);
         }
 
         .station-card.active {
-            background: rgba(100, 255, 218, 0.1);
-            border-color: #00b4d8;
-            animation: pulse-glow 2s infinite;
+            animation: activeCard 2s infinite;
+        }
+
+        @keyframes activeCard {
+            0%, 100% { transform: translateZ(0) rotateX(0); }
+            50% { transform: translateZ(20px) rotateX(5deg); }
         }
 
         .station-info {
@@ -434,16 +449,46 @@
 
         @media (max-width: 600px) {
             header {
-                flex-direction: column;
+                padding: 15px 0;
+            }
+
+            .neon-text {
+                width: 100%;
                 text-align: center;
+                margin-bottom: 10px;
+            }
+
+            nav {
+                width: 100%;
             }
 
             nav ul {
-                margin-top: 10px;
+                justify-content: center;
             }
 
             .radio-player {
                 max-width: 100%;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .futuristic-btn {
+                padding: 10px 20px;
+                min-width: 70px;
+            }
+
+            .tuner-buttons {
+                gap: 8px;
+            }
+
+            input[type="range"]::-webkit-slider-thumb {
+                width: 20px;
+                height: 20px;
+            }
+
+            input[type="range"]::-moz-range-thumb {
+                width: 20px;
+                height: 20px;
             }
         }
     </style>
@@ -465,9 +510,6 @@
             <nav>
                 <ul>
                     <li><a href="#" class="nav-link">Live Stations</a></li>
-                    <li><a href="#" class="nav-link">Favorites</a></li>
-                    <li><a href="#" class="nav-link">Categories</a></li>
-                    <li><a href="#" class="nav-link">Countries</a></li>
                 </ul>
             </nav>
         </header>
@@ -560,6 +602,7 @@
                         return;
                     }
 
+                    // Deduplicate stations based on URL and name
                     const newStations = data.map(station => ({
                         name: station.name,
                         url: station.url_resolved || station.url,
@@ -570,7 +613,16 @@
                         codec: station.codec
                     }));
 
-                    radioStations = [...radioStations, ...newStations];
+                    // Filter out duplicates
+                    const existingUrls = new Set(radioStations.map(s => s.url));
+                    const existingNames = new Set(radioStations.map(s => s.name.toLowerCase()));
+                    
+                    const uniqueNewStations = newStations.filter(station => 
+                        !existingUrls.has(station.url) && 
+                        !existingNames.has(station.name.toLowerCase())
+                    );
+
+                    radioStations = [...radioStations, ...uniqueNewStations];
                     currentPage++;
                     
                     filterStations();
@@ -590,10 +642,7 @@
                     if (radioStations.length === 0) {
                         radioStations = [
                             { name: "Classic Rock", url: "http://stream.zeno.fm/0r0xa792kwzuv", tags: ["rock"], country: "US" },
-                            { name: "Jazz 24/7", url: "http://stream.zeno.fm/f3wvbbqmdg8uv", tags: ["jazz"], country: "US" },
-                            { name: "Electronic Beats", url: "http://stream.zeno.fm/0r0xa792kwzuv", tags: ["electronic"], country: "US" },
-                            { name: "World Music", url: "http://stream.zeno.fm/f3wvbbqmdg8uv", tags: ["world"], country: "US" },
-                            { name: "Chill Lounge", url: "http://stream.zeno.fm/0r0xa792kwzuv", tags: ["electronic"], country: "US" }
+                            { name: "Jazz 24/7", url: "http://stream.zeno.fm/f3wvbbqmdg8uv", tags: ["jazz"], country: "US" }
                         ];
                         filteredStations = [...radioStations];
                         updateStationGrid();
